# aws_console_scanner

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aws_console_scanner/: __main__.py  app.py
nginx/: .default.conf.swp  default.conf
tests/: test_aws_console_scanner.py
