[tool.poetry]
name = "aws_console_scanner"
version = "0.1.0"
description = ""
authors = ["Ryan Gerstenkorn <ryan.gerstenkorn@rhinosecuritylabs.com>"]

[tool.poetry.scripts]
pacu = "aws_console_scanner.main:app"

[tool.poetry.dependencies]
python = "^3.8"
datasette = "^0.54"
mitmproxy = "^6.0.2"
sqlite-utils = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
